animations with text completed

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Transport międzynarodowy | Usługi transportowe | Firma transportowa AM Global | Miechów |  Małopolskie | Auta ciężarowe | Zamów transport"
+      content="Usług informatyczne | Tworzenie stron | Tworzenie aplikacji | Kraków | Miechów |  Małopolskie | Zamów stronę internetową"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>AM Global</title>
+    <title>Ardeo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
